feat: guests crud
